tdf#116981 Base when deleting table column

regression from
    commit	433fc2214c980abd82fa6240f45e634a53a3c61c (patch)
    sal_uIntPtr->sal_Int32 in MultiSelection

Previously, MultiSelection stored it's values internally as sal_uIntPtr,
but returned them as long in FirstSelected(), NextSelected(),
and SFX_ENDOFSELECTION was defined to be ULONG_MAX.
On 64-bit Linux, sal_uIntPtr is typedefed to sal_uInt64, and ULONG_MAX
is 2^64, which means that previously, the SFX_ENDOFSELECTION value was
being converted from 2^64 to -2^63 when it was returned, which was why
this loop worked.

Change-Id: Ia13836622dc1a0cb3b339c5587b71232f4197157
Reviewed-on: https://gerrit.libreoffice.org/52844
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>